I change the description on the Readme file

--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,11 @@
 <html lang="en" ng-app="AppUserMng">
   <head>
     <meta charset="utf-8">
-    <title>User Manager App</title>
+    <title>User Managment App</title>
     <link rel="stylesheet" href="style.css">        
   </head>
   <body>
+    <h1>User Managment App</h1>
     <user-list></user-list>
     <script src="bower_components/angular/angular.js"></script>
     <script src="app.js"></script>    
