I change the description on the Readme file again

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="AppUserMng">
+<html lang="en" ng-app="UserMngApp">
   <head>
     <meta charset="utf-8">
     <title>User Managment App</title>
