I wrote more description on the Readme file

--- a/app/usermodule/user.template.html
+++ b/app/usermodule/user.template.html
@@ -1,4 +1,5 @@
 <div class="user-container">
+    <h1>User Managment App</h1>
     <div class="user-search-box">        
         <input type="text" placeholder="search" ng-model="$ctrl.search"/>
         <input type="button" class="btn-selec-all" value="Select All" 
